<resources>
    <string name="app_name">House Cleaning</string>
    <string name="hint_email">Digite seu email</string>
    <string name="texto_btn_login">entrar</string>
    <string name="entrar_google">entrar com google</string>
    <string name="texto_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="texto_clique_aqui">clique aqui</string>
    <string name="texto_recuperar_senha">recuperar</string>
    <string name="texto_nao_possui_conta">Ainda não possui uma conta?</string>
    <string name="texto_ir_para_cadastro">ir para cadastro</string>
    <string name="registrar_google">registrar com Google</string>
    <string name="texto_ja_possui_conta">Já possui uma conta?</string>
    <string name="texto_ir_para_login">ir para login</string>
    <string name="texto_btn_registrar">registrar</string>
    <string name="hint_name">Digite seu nome</string>
    <string name="confirm_registration">Ao marcar você concorda com nossos Termos de Uso e Políticas de Privacidade.</string>
    <string name="menu_procurar">Procurar</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_configuracao">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>
    <string name="about_page">Sobre</string>
    <string name="bottom_navigation_tab1">Histórico</string>
    <string name="bottom_navigation_tab2">Solicitar Serviço</string>
    <string name="bottom_navigation_tab3">Solicitações</string>
    <string name="message_history_empty">Não há nada no seu histórico.</string>
    <string name="message_near_workers_empty">Não há nenhum prestador de serviço próximo a você.</string>
    <string name="message_workers_empty">Não há nenhum prestador de serviço nas demais localidades.</string>
    <string name="message_solicitations_empty">Ninguém solicitou um serviço para você ainda. :( Verifique se a opção "Prestar Serviço" está ativa no seu perfil.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cleaning_service_description_field">Descrição</string>
    <string name="cleaning_service_label">Solicitar Limpeza</string>
    <string name="cleaning_service_place_field">Cidade, Bairro</string>
    <string name="cleaning_service_street_field">Rua</string>
    <string name="cleaning_service_number_field">Número</string>
    <string name="cleaning_service_complement_field">Complemento</string>
    <string name="ok_button">Ok</string>
    <string name="save_button">Salvar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="cleaning_service_date_field">Data</string>
    <string name="cleaning_service_time_field">Horário</string>
    <string name="cleaning_service_datetime_field">Data e Horário</string>
    <string name="cleaning_service_number_of_rooms_field">Número de Cômodos</string>
    <string name="cleaning_service_additional_comments_field">Comentários Adicionais</string>
    <string name="rate_service_label">Avaliar Este Serviço</string>
    <string name="text_about">Produto desenvolvido para a disciplina de Desenvolvimento de Software para Dispositivos Móveis</string>
    <string name="github_link">
        <a href="https://github.com/CaioWF/house-cleaning-mobile-java-native">https://github.com/CaioWF/house-cleaning-mobile-java-native</a>
    </string>
    <string name="text_see_github">Acompanhe-nos no GitHub:</string>
    <string name="user_profile_load_image">Carregar Imagem</string>
    <string name="user_profile_name">Nome</string>
    <string name="user_profile_worker">Quero Prestar Serviços</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_password">Senha</string>
    <string name="user_profile_select_places">Escolher Locais</string>
    <string name="title_dialog_camera">Escolha uma opção</string>
    <string-array name="camera_options">
        <item>Carregar da galeria</item>
        <item>Abrir câmera</item>
    </string-array>
    <string name="near_workers">Atendem na sua localização atual</string>
    <string name="others_workers">Atendem nas demais localidades</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps_page">Localização do serviço</string>
</resources>
