<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_procurar"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_perfil" />
    <item android:id="@+id/menu_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/menu_sobre" />
    <item android:id="@+id/menu_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/menu_sair" />
</menu>