<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_person_black_24dp" />

        <Button
            android:id="@+id/load_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_load_image" />

        <TextView
            android:id="@+id/cleaning_service_area_size_text_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/user_profile_name" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/user_profile_email" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/user_profile_password" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/user_profile_worker" />

        <Spinner
            android:id="@+id/is_worker_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/select_places_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_select_places" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>