<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestCleaningServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:layout_editor_absoluteX="-58dp"
        tools:layout_editor_absoluteY="-319dp">

        <TextView
            android:id="@+id/cleaning_service_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/cleaning_service_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cleaning_service_area_size_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/cleaning_service_area_size_field" />

        <EditText
            android:id="@+id/area_size_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/cleaning_service_datetime_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/cleaning_service_datetime_field" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_cleaning_service_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cleaning_service_date_field" />

            <Button
                android:id="@+id/set_cleaning_service_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cleaning_service_time_field" />
        </LinearLayout>

        <TextView
            android:id="@+id/cleaning_service_place_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/cleaning_service_place_field" />

        <Spinner
            android:id="@+id/place_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cleaning_service_street_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/cleaning_service_street_field" />

        <EditText
            android:id="@+id/street_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/cleaning_service_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/cleaning_service_number_field" />

        <EditText
            android:id="@+id/number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/cleaning_service_complement_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:text="@string/cleaning_service_complement_field" />

        <EditText
            android:id="@+id/complement_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/cleaning_service_additional_comments_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="0dp"
            android:paddingRight="4dp"
            android:paddingBottom="0dp"
            android:text="@string/cleaning_service_additional_comments_field" />

        <EditText
            android:id="@+id/additional_comments_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButtonCancel"
                android:text="@string/cleaning_service_cancel_button" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickButtonSave"
                android:text="@string/cleaning_service_save_button" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>